--- a/Offline.csproj
+++ b/Offline.csproj
@@ -87,6 +87,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Helperspine.cs" />
+    <Compile Include="NeuralNetworkspine.cs" />
     <Compile Include="test.cs" />
     <Page Include="main.xaml">
       <SubType>Designer</SubType>
